--- a/api_data_wrangling_mini_project.ipynb
+++ b/api_data_wrangling_mini_project.ipynb
@@ -303,7 +303,7 @@
    ],
    "source": [
     "import requests\n",
-    "res = requests.get('https://data.nasdaq.com/api/v3/datasets/FSE/AFX_X/data.json?start_date=2017-01-01&end_date=2017-12-31&api_key=MnTfnUH-2GAYNVWv5ypy')\n",
+    "res = requests.get('https://data.nasdaq.com/api/v3/datasets/FSE/AFX_X/data.json?start_date=2017-01-01&end_date=2017-12-31&api_key=API_KEY')\n",
     "print(res)"
    ]
   },
